# purdue-company

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
src/purdue_company/: flow.py  tools.py
src/purdue_company/me/: crew.py
src/purdue_company/me/config/: agents.yaml  tasks.yaml
src/purdue_company/passive_income/: crew.py
src/purdue_company/passive_income/config/: agents.yaml  tasks.yaml
src/purdue_company/trading/: crew.py  tools.py
src/purdue_company/trading/config/: agents.yaml  tasks.yaml
